      - Malayalam updated by Praveen A. Closes: #479294
      - Finnish updated by Tommi Vainikainen. Closes: #479351
      - Malayalam updated by SZERVÁC Attila. Closes: #479354
      - Kurdish updated by Erdal Ronahi. Closes: #479444
      - Lithuanian updated by Kestutis Biliunas. Closes: #479451
    + su-to-root translations:
      - Lithuanian updated by Kestutis Biliunas. Closes: #479453

 -- Bill Allombert <ballombe@debian.org>  Wed, 05 Mar 2008 21:21:27 +0100

menu (2.1.38) unstable; urgency=low

  * The "little zebra" release.
  * Handling of l10n by Christian Perrier:
    + Menu sections translations:
      - Russian updated by Yuri Kozlov. Closes: #462283
      - Traditional Chinese updated by Tetralet. Closes: #464855
      - Romanian updated by stan ioan-eugen. Closes: #466618
      - Basque updated by Piarre Beobide. Closes: #468682
    + programs translations:
      - French completed by Christian Perrier. Closes: #468466
      - Romanian updated by stan ioan-eugen. Closes: #466618
    + su-to-root translations:
      - Romanian updated by stan ioan-eugen. Closes: #466618

  * Work-around apt bug #463030 by calling setsid in daemon mode.
    Closes: #462648. Thanks Dmitry E. Oboukhov for the patch.

  * Patch from Robert Luberda:
    - Dependency check now handles virtual packages. Closes: #452801

  * doc/menu.sgml:
    - Remove excerpt from menu policy about authoritativeness
      pasted by mistake.  Closes: #466248. Thanks Robert Luberda.

  * debian/bug.presubj:
    - Remove color escape codes which are not displayed correctly by
      current reportbug. Thanks Dan Jacobson.
  
  * su-to-root:
    - Fix support for sux.
    - Fix command quoting for sudo.  Closes: #465136. Thanks Daniel Hahler.
    - Fix typo passwd->password. Closes: #462645. Thanks Salvatore Bonaccorso.

  * examples/translate_menus:
    - automatic conversion from old section names to new names would replace